disable main window when settings window is open in order to halt ability to open multiple settings windows. (issue #8)

--- a/FiLink/Views/MainWindow.axaml
+++ b/FiLink/Views/MainWindow.axaml
@@ -12,7 +12,9 @@
         Icon="/Assets/FiLinkIco.png"
         KeyUp="InputElement_OnKeyUp"
         Initialized="Window_OnInitialized"
-        Title="FiLink">
+        Title="FiLink"
+        IsEnabled="{Binding IsEnabled}"
+        >
 
     <Design.DataContext>
         <vm:MainWindowViewModel />
