Implement [prototype of] working encryption (issue #6) + minor fixes.

--- a/FiLink/Views/SettingsWindow.axaml
+++ b/FiLink/Views/SettingsWindow.axaml
@@ -153,7 +153,7 @@
                             Margin="10"
                             VerticalAlignment="Center"
                             VerticalContentAlignment="Center"
-                            Text="{Binding EncryptionKey}" />
+                            Text="{Binding EncryptionPassword}" />
                     </Grid>
                 </Grid>
             </TabItem>
