--- a/FiLink/Views/SettingsWindow.axaml
+++ b/FiLink/Views/SettingsWindow.axaml
@@ -5,8 +5,8 @@
         xmlns:vm="using:FiLink.ViewModels"
         mc:Ignorable="d"
         Width="300"
-        Height="325"
-        MinHeight="325"
+        Height="360"
+        MinHeight="360"
         MinWidth="300"
         x:Class="FiLink.Views.SettingsWindow"
         Icon="/Assets/FiLinkIco.png"
@@ -36,6 +36,7 @@
                         <RowDefinition Height="*" /> <!-- 2 -->
                         <RowDefinition Height="*" /> <!-- 3 -->
                         <RowDefinition Height="*" /> <!-- 4 -->
+                        <RowDefinition Height="*" /> <!-- 5 -->
                         <RowDefinition Height="*" /> <!-- 5 -->
                     </Grid.RowDefinitions>
                     
@@ -108,6 +109,24 @@
                             VerticalAlignment="Center"
                             VerticalContentAlignment="Center"
                             Text="{Binding PingTimeout}" />
+                    </Grid>
+                    
+                    <!-- OPEN FILE DIRECTORY AFTER DOWNLOADING FILE -->
+                    <Grid Grid.Row="4" ColumnDefinitions="150,*">
+                        <CheckBox
+                            Grid.Column="1"
+                            HorizontalAlignment="Center"
+                            Margin="10"
+                            Checked="AutoFiles_OnChecked"
+                            Unchecked="AutoFiles_OnUnchecked"
+                        />
+                        <Label
+                            Grid.Column="0"
+                            FontSize="10"
+                            Content="Open Files on download: "
+                            Margin="10"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center" />
                     </Grid>
                 </Grid>
             </TabItem>
