An attempt was made to finish implementation of AutoDirOpen functionality, however developer was defeated by framework bug... Also fix check boxes in settings window.

--- a/FiLink/Views/SettingsWindow.axaml
+++ b/FiLink/Views/SettingsWindow.axaml
@@ -117,6 +117,8 @@
                             Grid.Column="1"
                             HorizontalAlignment="Center"
                             Margin="10"
+                            IsThreeState="False"
+                            IsChecked="{Binding OpenFolderOnDownload}"
                             Checked="AutoFiles_OnChecked"
                             Unchecked="AutoFiles_OnUnchecked"
                         />
@@ -147,6 +149,8 @@
                             Grid.Column="0"
                             HorizontalAlignment="Center"
                             Margin="10"
+                            IsThreeState="False"
+                            IsChecked="{Binding Encryption}"
                             Checked="ToggleButton_OnChecked"
                             Unchecked="ToggleButton_OnUnchecked"
                             />
